# clad

.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  MemoryComplexity.cpp  RSBench_diff.patch  TapenadeVsclad.cpp
cmake/modules/: AddClad.cmake
include/clad/Differentiator/: Differentiator.h  RestoreTracker.h  ReverseModeVisitor.h  Tape.h
lib/Differentiator/: ReverseModeVisitor.cpp  ReverseModeVisitorCUDA.cpp  VisitorBase.cpp
test/CUDA/: GradientKernels.cu
test/Features/: Tape-RamDisk.cpp
test/Regressions/: issue-1701.cpp
